[gd_scene load_steps=3 format=2]

[ext_resource path="res://HealthControl.gd" type="Script" id=1]
[ext_resource path="res://HeartControl.tscn" type="PackedScene" id=2]

[node name="HealthControl" type="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 173.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )

[node name="HeartControl" parent="." index="0" instance=ExtResource( 2 )]

margin_bottom = 40.0

[node name="HeartControl2" parent="." index="1" instance=ExtResource( 2 )]

margin_left = 36.0
margin_right = 68.0
margin_bottom = 40.0

[node name="HeartControl3" parent="." index="2" instance=ExtResource( 2 )]

margin_left = 72.0
margin_right = 104.0
margin_bottom = 40.0

[node name="HoldBreathTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = false


